kubernetes/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-api
  # namespace: api-service
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
    # nginx.ingress.kubernetes.io/auth-type: basic
    # nginx.ingress.kubernetes.io/auth-secret: basic-auth
    # nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - nibelheim'
spec:
  tls:
    - hosts:
        - go-api.microk8s
      secretName: go-api-ingress-tls
  rules:
    - host: go-api.microk8s
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-api
                port:
                  number: 8080
